WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56821
[EFL] Functions without parameters take (void) instead of ()
https://bugs.webkit.org/show_bug.cgi?id=56821
Summary
[EFL] Functions without parameters take (void) instead of ()
Grzegorz Czajkowski
Reported
2011-03-22 02:41:42 PDT
Some of functions without parameters in WebKit-EFL take () or (void) in declaration/definition. I suggest to use (void) for the ones.
Attachments
patch
(6.70 KB, patch)
2011-03-22 02:49 PDT
,
Grzegorz Czajkowski
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Grzegorz Czajkowski
Comment 1
2011-03-22 02:49:35 PDT
Created
attachment 86449
[details]
patch
Gyuyoung Kim
Comment 2
2011-03-22 02:53:18 PDT
LGTM.
WebKit Commit Bot
Comment 3
2011-03-22 05:22:19 PDT
Comment on
attachment 86449
[details]
patch Clearing flags on attachment: 86449 Committed
r81658
: <
http://trac.webkit.org/changeset/81658
>
WebKit Commit Bot
Comment 4
2011-03-22 05:22:24 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 5
2011-03-22 08:37:08 PDT
http://trac.webkit.org/changeset/81658
might have broken GTK Linux 32-bit Debug The following tests are not passing: inspector/debugger/debug-inlined-scripts.html inspector/protocol/database-agent.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug